--- a/home.css
+++ b/home.css
@@ -1,3 +1,7 @@
+*/{
+    margin: 0;
+    padding: 0;
+}
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -12,20 +16,26 @@ header {
     /*define o tamanho do cabeçalho da pagina*/
 }
 
+header h1 {
+    margin: o;
+    font-size: 24px;
+}
+
+p {
+    font-size: 16px;
+    margin-left: 8px;
+    margin-right: 8px;
+}
+
 header nav {
     text-align: right;
     /*para alinhas os links na direita da pagina*/
 }
 
-.container {
+/*.container {
     display: block;
     margin: 8px auto;
-}
-
-header h1 {
-    margin: o;
-    font-size: 24px;
-}
+}*/
 
 nav li {
     display: inline;
@@ -52,6 +62,7 @@ footer{
 img{
     width: 50px;
     height: 50px;
+    padding: auto;
 } 
 
 #contact ul li{
@@ -60,18 +71,39 @@ img{
     padding: 12px;
 }
 
-.conteiner {
+/*ul .conteiner {
     display: grid;
-    grid-template-columns: 1fr 1fr; /* Divide o contêiner em duas colunas de largura igual */
-    gap: 20px; /* Adiciona um espaço entre as colunas */
+    grid-template-columns: 1fr 1fr; /* Divide o contêiner em duas colunas de largura igual 
+    gap: 20px; /* Adiciona um espaço entre as colunas 
 }
 
 form {
-    grid-column: 1 / 2; /* Ocupa a primeira coluna */
+    grid-column: 1 / 2; /* Ocupa a primeira coluna 
 }
 
 .social-links {
-    grid-column: 2 / 3; /* Ocupa a segunda coluna */
+    grid-column: 2 / 3; /* Ocupa a segunda coluna 
+}
+*/
+
+input,
+textarea{
+    border-radius: 10px;
+    display: block;
+    padding: 5px 5px 5px 5px;
+    margin: 10px;
+    cursor: pointer;
 }
 
+/*input{
+    background-color: aqua;
+}
+/*
+input button:hover{
+    background-color: blue;
+}*/
+
+textarea{
+    resize: none;
+}
 
