--- a/home.css
+++ b/home.css
@@ -16,11 +16,20 @@ header {
     /*define o tamanho do cabeçalho da pagina*/
 }
 
-header h1 {
-    margin: o;
+#about h1{
     font-size: 24px;
+    margin-left: 8px;
 }
 
+#tec h2{
+    font-size: 24px;
+    margin-left: 8px;
+}
+
+#contact h3{
+    font-size: 24px;
+    margin-left: 8px;
+}
 p {
     font-size: 16px;
     margin-left: 8px;
@@ -53,12 +62,6 @@ nav li a {
     color: beige;
 }
 
-footer{
-    background-color: rgb(27, 27, 46);
-    padding: 14px;
-    color: beige;
-}
-
 img{
     width: 50px;
     height: 50px;
@@ -69,6 +72,10 @@ img{
     text-decoration: none;
     display: inline;
     padding: 12px;
+}
+
+form h3{
+    font-size: 24px;
 }
 
 /*ul .conteiner {
@@ -103,7 +110,17 @@ input button:hover{
     background-color: blue;
 }*/
 
+input[type="submit"]:hover {
+    background-color: rgb(27, 27, 46);
+    color: white;
+}
+
 textarea{
     resize: none;
 }
 
+footer{
+    background-color: rgb(27, 27, 46);
+    padding: 14px;
+    color: beige;
+}
