--- a/calculadora.css
+++ b/calculadora.css
@@ -42,3 +42,15 @@
 .botao:hover{
     background-color: black;
 }
+
+#resultado{
+    background-color: #fff;
+    width: 208px;
+    height: 30px;
+    margin: 5px;
+    font-size: 25px;
+    color: black;
+    text-align: right;
+    padding: 5px;
+    
+}
