--- a/lista.css
+++ b/lista.css
@@ -12,4 +12,30 @@
 body{
     background-color: var(--color-dark);
     color: var(--color-white);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4rem;
 }
+
+.content{
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+}
+
+.content--add--item{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    flex-wrap: wrap;
+}
+
+#input--new--task,
+#btn-new-task{
+    border: none;
+    font-size: 1rem;
+    outline: none;  /*pesquisar sobre rem e outline*/
+    padding: 1rem;
+}
+
