--- a/lista.css
+++ b/lista.css
@@ -31,11 +31,42 @@ body{
     flex-wrap: wrap;
 }
 
-#input--new--task,
+#input-new-task,
 #btn-new-task{
     border: none;
     font-size: 1rem;
     outline: none;  /*pesquisar sobre rem e outline*/
     padding: 1rem;
+}
+
+#input-new-task{
+    width: 20rem;
+    border-radius: 1rem;
+}
+
+#btn-new-task{
+    background-color: var(--color-dark2);
+    color: var(--color-white);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+}
+
+#btn-new-task:hover{
+    background-color: var(--color-dark3);
+}
+
+#to-do-list{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 0;
+}
+
+#to-do-list li{
+    list-style-type: none;
+    font-size: 1.4rem;
+    text-transform: capitalize;
 }
 
