--- a/lista.css
+++ b/lista.css
@@ -68,5 +68,7 @@ body{
     list-style-type: none;
     font-size: 1.4rem;
     text-transform: capitalize;
+    display: flex;
+    justify-content: space-between;
 }
 
