--- a/calculadora.css
+++ b/calculadora.css
@@ -51,5 +51,4 @@
     color: black;
     text-align: right;
     padding: 5px;
-    
-}
+}/*secão responsavel por mostrar as informaçoes que sao digitadas pelo usuario*/
