--- a/home.css
+++ b/home.css
@@ -58,7 +58,7 @@ p {
 
 header nav {
     text-align: right;
-    /*para alinhas os links na direita da pagina*/
+    /*para alinhas os links ou qualquer conteudo que for necessario alihar a direita da pagina*/
 }
 
 nav li {
