--- a/lista.css
+++ b/lista.css
@@ -64,11 +64,25 @@ body{
     padding: 0;
 }
 
+
 #to-do-list li{
     list-style-type: none;
     font-size: 1.4rem;
     text-transform: capitalize;
     display: flex;
+    align-items: center;
     justify-content: space-between;
 }
 
+#to-do-list li:hover{
+    background-color: var(--color-dark3);
+    transition: .4s;
+  border-radius: 1rem;
+  padding-left: 1rem;  
+  
+}
+
+#btn-ok{
+    cursor: pointer;
+    border-radius: 40%;
+}
