--- a/QRCode.css
+++ b/QRCode.css
@@ -22,6 +22,10 @@ body{
     transition: height 0.5s ease;
 }
 
+.container.active{
+    height: 530px;
+}
+
 header h1{
     text-align: center;
     font-weight: 600;
@@ -43,6 +47,7 @@ header p{
     width: 100%;
     height: 55px;
     border: none;
+    outline: none;
     border-radius: 7px;
 }
 
@@ -50,4 +55,29 @@ header p{
     padding: 0 17px;
     font-size: 18px;
     border: 1px solid #999;
+}
+
+.form button{
+    color: #fff;
+    background: #987a71;
+    margin-top: 20px;
+    font-size: 17px;
+    cursor: pointer;
+    transition: all 0.5s ease;
+}
+
+.form button:hover{
+    background: #b8958a;
+}
+
+.container .qr-code{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 33px 0;
+    pointer-events: none
+}
+
+.qr-code .img{
+    
 }
